# tda-market-risk

./: README.md  pyproject.toml
configs/: config.yaml
notebooks/: 01_sanity_checks.ipynb
src/tda_market_risk/: cli.py  data_loader.py  preprocessing.py
tda-market-risk/: .gitignore  requirements.txt
tda-market-risk/src/tda_market_risk/: __init__.py  config.py  distance.py  io.py  rolling.py  sanity.py
tda-market-risk/tests/: test_rolling.py
tests/: test_distance.py
